Meet history updates

--- a/live/index.html
+++ b/live/index.html
@@ -11,8 +11,6 @@
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <style>
-  </style>
 </head>
 
 <body>
@@ -28,7 +26,7 @@
     <img src="../images/live.svg" class="live-icon-lg" alt="live">
     <br>
     <p><!--a href="#">Join the live meetup</a--></p>
-    <p>No meetup at the moment.<br>Please check back soon!</p>
+    <p>Next meetup will be April 25th at 7pm CT.<br>Please check back soon!</p>
   </section>
 </div>
 
