--- a/slides/index.html
+++ b/slides/index.html
@@ -32,6 +32,14 @@
   .sponsor a {
     font-weight: 600;
   }
+  .time-marker {
+    margin: 10px 15px 20px;
+    background: #f8f8f8;
+    color: #888888;
+    padding: 15px 20px;
+    border-radius: 5px;
+    font-size: .8em;
+  }
   </style>
 </head>
 
@@ -71,6 +79,13 @@
       </p>
 
       <h3>2024</h3>
+
+      <h4>April</h4>
+      <ul>
+        <li>News from the Bleeding Edge</li>
+        <li>HTML with Superpowers</li>
+      </ul>
+
       <h4>March &mdash; <a href="https://www.youtube.com/watch?v=4-fkYNv7qog">video</a></h4>
       <ul>
         <li><a href="2024/03-mar/">News from the Bleeding Edge</a></li>
@@ -86,15 +101,12 @@
         <li><strong class="sponsor">Sponsor: <a href="https://www.expediagroup.com/">Expedia Group</a></strong></li>
       </ul>
 
-      <h3>2022&ndash;2023</h3>
-      <p><em>Covid break...</em></p>
+      <h3>2021&ndash;2023</h3>
 
-      <h3>2021</h3>
+      <h4>Feb 2021&ndash;October 2023</h4>
+      <p class="time-marker"><em>Unscheduled Covid break...</em></p>
 
-      <h4>February&ndash;October</h4>
-      <p><em>Covid break...</em></p>
-
-      <h4>January (virtual)</h4>
+      <h4>January 2021 (virtual)</h4>
       <ul>
         <li>React Query</li>
         <li>Gridsome for Apps (Vue)</li>
@@ -104,7 +116,7 @@
       <h3>2020</h3>
 
       <h4>March&ndash;October</h4>
-      <p><em>Covid break...</em></p>
+      <p class="time-marker"><em>Unscheduled Covid break...</em></p>
 
       <h4>February</h4>
       <ul>
@@ -437,13 +449,57 @@
         <li>July &mdash;
           <a href="2013/07-july">Learn About Google Glass</a>
         </li>
+      </ul>
+
+      <p class="time-marker">
+        The original Sencha Meetup was relaunched as Bleeding Edge Web in July 2013.
+      </p>
+
+      <ul>
         <li>June &mdash;
           <a href="2013/06-june">Winds of Change (final Sencha meetup)</a>
         </li>
         <li>May &mdash;
           <a href="2013/05-may/reveal.js/#/">JsDuck: Create Your Own "Sencha" Docs</a>
         </li>
+        <li>March &mdash; Meet Mats Bryntse of Bryntum</li>
+        <li>February &mdash; Sencha Touch in the Wild</li>
       </ul>
+
+      <h3>2012</h3>
+      <ul>
+        <li>December &mdash; Intro to Sencha Architect</li>
+        <li>August &mdash; Summer Siesta (social meetup)</li>
+        <li>June &mdash; Meet Ted Patrick of Sencha</li>
+        <li>May &mdash; Sencha Jobs</li>
+        <li>April &mdash; All About Sencha Touch 2</li>
+        <li>March &mdash; Ext 3 to 4 Migration</li>
+        <li>February &mdash; February Sencha Meetup</li>
+        <li>January &mdash; January Sencha Meetup</li>
+      </ul>
+
+      <h3>2011</h3>
+      <ul>
+        <li>October &mdash; Oct-Nov / SenchaCon Meetup</li>
+        <li>September &mdash; The Future of JS App Architecture</li>
+        <li>August &mdash; Sencha Touch in the Real World</li>
+        <li>June &mdash; Sencha Touch Overview</li>
+        <li>May &mdash; Let's Reconnect! / Ext JS 4 Overview</li>
+      </ul>
+
+      <h3>2010</h3>
+      <ul>
+        <li>December &mdash; Ext JS Npv/Dec Meetup</li>
+        <li>September &mdash; Austin Ext JS Meetup</li>
+        <li>August &mdash; Austin Ext JS Meetup Kick-off</li>
+      </ul>
+
+      <p class="time-marker">
+        We started life as the Austin Ext JS / Sencha Meetup. Trivia: did you know that meetup
+        organizer Brian Moeskau co-founded the company behind <a
+          href="https://www.sencha.com/products/extjs/" target="_blank">Ext
+        JS</a> back in the day?
+      </p>
     </section>
   </div>
 
