April slides mostly done

--- a/live/index.html
+++ b/live/index.html
@@ -22,11 +22,11 @@
     <p><a href="../">&larr; Home</a></p>
   </header>
 
-  <section class="live-info off">
+  <section class="live-info on">
     <img src="../images/live.svg" class="live-icon-lg" alt="live">
-    <br>
-    <p><!--a href="#">Join the live meetup</a--></p>
-    <p>Next meetup will be April 25th at 7pm CT.<br>Please check back soon!</p>
+    <br><br>
+    <p>Next meetup is April 25th at 7pm CT.</p>
+    <p><a href="https://expedia.zoom.us/j/97240118971?pwd=UE9taGpKOHpTMUNKTE5jQ3dJQ25xQT09">Join the live meetup</a></p>
   </section>
 </div>
 
@@ -42,5 +42,4 @@
   } catch (err) { }
 </script>
 </body>
-
 </html>
