--- a/slides/index.html
+++ b/slides/index.html
@@ -82,7 +82,7 @@
 
       <h4>April</h4>
       <ul>
-        <li>News from the Bleeding Edge</li>
+        <li><a href="2024/04-apr/">News from the Bleeding Edge</a></li>
         <li>HTML with Superpowers</li>
       </ul>
 
@@ -191,7 +191,7 @@
         <li><a href="https://docs.google.com/presentation/d/1CXa2qyxXwXN9-5O2-CgUm9Xk2QOhJ_dcFgIihm1mTsk/edit?usp=sharing">Visual Regression Testing with Percy.io</a></li>
         <li><a href="https://docs.google.com/presentation/d/1TF1iOV0khPHQMmicDgoHEYQjXACKTtIabEpHAD0kSBg/edit?usp=sharing">Level Up with Redis + Node</a></li>
         <li><a href="adhoc/enabledb">EnableDB: An Experiment with DB Gateways</a></li>
-        <li><strong class="sponsor">Sponsor: <a href="https://grnh.se/27cc659b1">Duo Security</a></strong></li>
+        <li><strong class="sponsor">Sponsor: <a href="https://duo.com/">Duo Security</a></strong></li>
       </ul>
 
       <h4>February &mdash; <a href="https://www.youtube.com/watch?v=4FSc__j1QX0">video</a></h4>
