Post-meetup updates

--- a/live/index.html
+++ b/live/index.html
@@ -22,11 +22,11 @@
     <p><a href="../">&larr; Home</a></p>
   </header>
 
-  <section class="live-info on">
+  <section class="live-info off">
     <img src="../images/live.svg" class="live-icon-lg" alt="live">
     <br><br>
-    <p>Next meetup is April 25th at 7pm CT.</p>
-    <p><a href="https://expedia.zoom.us/j/97240118971?pwd=UE9taGpKOHpTMUNKTE5jQ3dJQ25xQT09">Join the live meetup</a></p>
+    <p>Next meetup is Thurs, May 23rd at 7pm CT.<br>
+    Live link will be posted closer to the event.</p>
   </section>
 </div>
 
