--- a/slides/index.html
+++ b/slides/index.html
@@ -84,6 +84,7 @@
       <ul>
         <li><a href="2024/04-apr/">News from the Bleeding Edge</a></li>
         <li>HTML with Superpowers</li>
+        <li><strong class="sponsor">Sponsor: <a href="https://www.edgeatx.org/sponsorship.html">Bleeding Edge Web</a></strong></li>
       </ul>
 
       <h4>March &mdash; <a href="https://www.youtube.com/watch?v=4-fkYNv7qog">video</a></h4>
