--- a/slides/index.html
+++ b/slides/index.html
@@ -83,7 +83,7 @@
       <h4>April</h4>
       <ul>
         <li><a href="2024/04-apr/">News from the Bleeding Edge</a></li>
-        <li>HTML with Superpowers</li>
+        <li><a href="https://noti.st/davatron5000/k6N2LP/html-with-superpowers">HTML with Superpowers</a></li>
         <li><strong class="sponsor">Sponsor: <a href="https://www.edgeatx.org/sponsorship.html">Bleeding Edge Web</a></strong></li>
       </ul>
 
