Added April video link

--- a/slides/index.html
+++ b/slides/index.html
@@ -80,7 +80,7 @@
 
       <h3>2024</h3>
 
-      <h4>April</h4>
+      <h4>April &mdash; <a href="https://www.youtube.com/watch?v=4i-RJl8lr1c">video</a></h4>
       <ul>
         <li><a href="2024/04-apr/">News from the Bleeding Edge</a></li>
         <li><a href="https://noti.st/davatron5000/k6N2LP/html-with-superpowers">HTML with Superpowers</a></li>
