Finished May slides

--- a/live/index.html
+++ b/live/index.html
@@ -25,8 +25,13 @@
   <section class="live-info off">
     <img src="../images/live.svg" class="live-icon-lg" alt="live">
     <br><br>
-    <p>Next meetup is Thurs, May 23rd at 7pm CT.<br>
-    Live link will be posted closer to the event.</p>
+    <p>
+      Next meetup is Thurs, May 23rd at 7pm CT.
+    </p>
+    <p>
+      <em>There will not be a livestream for this event.</em><br>
+      The recording will be posted at a later date.
+    </p>
   </section>
 </div>
 
