--- a/slides/index.html
+++ b/slides/index.html
@@ -80,6 +80,13 @@
 
       <h3>2024</h3>
 
+      <h4>May</h4>
+      <ul>
+        <li><a href="2024/05-may/">News from the Bleeding Edge</a></li>
+        <li>Thinking About Your Code: Push vs Pull</li>
+        <li><strong class="sponsor">Sponsor: <a href="https://jam.dev">Jam.dev</a></strong></li>
+      </ul>
+
       <h4>April &mdash; <a href="https://www.youtube.com/watch?v=4i-RJl8lr1c">video</a></h4>
       <ul>
         <li><a href="2024/04-apr/">News from the Bleeding Edge</a></li>
