Finished June slides

--- a/live/index.html
+++ b/live/index.html
@@ -22,15 +22,15 @@
     <p><a href="../">&larr; Home</a></p>
   </header>
 
-  <section class="live-info off">
+  <section class="live-info on">
     <img src="../images/live.svg" class="live-icon-lg" alt="live">
     <br><br>
     <p>
-      Next meetup is Thurs, May 23rd at 7pm CT.
+      Next meetup is Thurs, June 27th at 7pm CT.
     </p>
     <p>
-      <em>There will not be a livestream for this event.</em><br>
-      The recording will be posted at a later date.
+      <a href="https://expedia.zoom.us/j/91517465047?pwd=md1YZtbGCzr0C5abwX0k3qD7eYz9UI.1" target="_blank">Join
+        live</a> once the meetup has begun.
     </p>
   </section>
 </div>
