--- a/slides/index.html
+++ b/slides/index.html
@@ -80,6 +80,13 @@
 
       <h3>2024</h3>
 
+      <h4>June</h4>
+      <ul>
+        <li><a href="2024/06-june/">News from the Bleeding Edge</a></li>
+        <li>The Root of All (Web) Evils</li>
+        <li><strong class="sponsor">Sponsor: <a href="https://www.edgeatx.org/sponsorship.html">Bleeding Edge Web</a></strong></li>
+      </ul>
+
       <h4>May</h4>
       <ul>
         <li><a href="2024/05-may/">News from the Bleeding Edge</a></li>
