Finished July slides, other small updates

--- a/slides/index.html
+++ b/slides/index.html
@@ -80,7 +80,14 @@
 
       <h3>2024</h3>
 
-      <h4>June</h4>
+      <h4>July</h4>
+      <ul>
+        <li><a href="2024/07-july/">News from the Bleeding Edge</a></li>
+        <li>Turbo Charge Your Stack with AI</li>
+        <li><strong class="sponsor">Sponsor: <a href="https://www.edgeatx.org/sponsorship.html">Bleeding Edge Web</a></strong></li>
+      </ul>
+
+      <h4>June &mdash; <a href="https://www.youtube.com/watch?v=0PsWVR0K9z0" target="_blank">video</a></h4>
       <ul>
         <li><a href="2024/06-june/">News from the Bleeding Edge</a></li>
         <li>The Root of All (Web) Evils</li>
@@ -94,14 +101,14 @@
         <li><strong class="sponsor">Sponsor: <a href="https://jam.dev">Jam.dev</a></strong></li>
       </ul>
 
-      <h4>April &mdash; <a href="https://www.youtube.com/watch?v=4i-RJl8lr1c">video</a></h4>
+      <h4>April &mdash; <a href="https://www.youtube.com/watch?v=4i-RJl8lr1c" target="_blank">video</a></h4>
       <ul>
         <li><a href="2024/04-apr/">News from the Bleeding Edge</a></li>
         <li><a href="https://noti.st/davatron5000/k6N2LP/html-with-superpowers">HTML with Superpowers</a></li>
         <li><strong class="sponsor">Sponsor: <a href="https://www.edgeatx.org/sponsorship.html">Bleeding Edge Web</a></strong></li>
       </ul>
 
-      <h4>March &mdash; <a href="https://www.youtube.com/watch?v=4-fkYNv7qog">video</a></h4>
+      <h4>March &mdash; <a href="https://www.youtube.com/watch?v=4-fkYNv7qog" target="_blank">video</a></h4>
       <ul>
         <li><a href="2024/03-mar/">News from the Bleeding Edge</a></li>
         <li><a href="https://fpliger.pyscriptapps.com/talks-bleeding-edge-web-2024/latest/">PyScript
@@ -109,7 +116,7 @@
         <li><strong class="sponsor">Sponsor: <a href="https://teamtopia.com/">Team Topia</a></strong></li>
       </ul>
 
-      <h4>February &mdash; <a href="https://www.youtube.com/watch?v=0XCvYxn1M9M">video</a></h4>
+      <h4>February &mdash; <a href="https://www.youtube.com/watch?v=0XCvYxn1M9M" target="_blank">video</a></h4>
       <ul>
         <li><a href="2024/02-feb/">News from the Bleeding Edge</a></li>
         <li><a href="https://github.com/tedpatrick/htmx-talk">Modern Web Applications with HTMX</a></li>
@@ -141,7 +148,7 @@
         <li><strong class="sponsor">Sponsor: <a href="https://events.indeed.com/hiringevents/">Indeed Hiring Events</a></strong></li>
       </ul>
 
-      <h4>January &mdash; <a href="https://www.youtube.com/watch?v=VZTBpnL-58I">video</a></h4>
+      <h4>January &mdash; <a href="https://www.youtube.com/watch?v=VZTBpnL-58I" target="_blank">video</a></h4>
       <ul>
         <li><a href="2020/01-jan">News from the Bleeding Edge</a></li>
         <li><a href="https://slides.com/kmurgic/react-concurrent-mode/">React Concurrent Mode</a></li>
@@ -153,7 +160,7 @@
       <h4>October&ndash;December</h4>
       <p><em>Holiday break</em></p>
 
-      <h4>September &mdash; <a href="https://youtu.be/DSn3L1cOE7o?t=34">video</a></h4>
+      <h4>September &mdash; <a href="https://youtu.be/DSn3L1cOE7o?t=34" target="_blank">video</a></h4>
       <ul>
         <li><a href="2019/09-sep">News from the Bleeding Edge</a></li>
         <li><a href="https://docs.google.com/presentation/d/1rE_FqpZT8rFB2AswF_glLIoghZ7ZJsi3PtZTgCQxkos/edit?ts=5d84138e#slide=id.g5f38f9700d_1_485">Analytics &amp; Data for Developers</a></li>
@@ -162,7 +169,7 @@
         <li><strong class="sponsor">Sponsor: <a href="https://fauna.com/">Fauna</a></strong></li>
       </ul>
 
-      <h4>August &mdash; <a href="https://www.youtube.com/watch?v=aUNfi4n5lTM&t=278">video</a></h4>
+      <h4>August &mdash; <a href="https://www.youtube.com/watch?v=aUNfi4n5lTM&t=278" target="_blank">video</a></h4>
       <ul>
         <li><a href="2019/08-aug">News from the Bleeding Edge</a></li>
         <li><a href="2019/08-aug/files/open-source.pdf">Everyone Can Do Open Source</a></li>
@@ -170,7 +177,7 @@
         <li><strong class="sponsor">Sponsor: <a href="https://company.auntbertha.com/">Aunt Bertha</a></strong></li>
       </ul>
 
-      <h4>July &mdash; <a href="https://www.youtube.com/watch?v=heR6iswSeQw">video</a></h4>
+      <h4>July &mdash; <a href="https://www.youtube.com/watch?v=heR6iswSeQw" target="_blank">video</a></h4>
       <ul>
         <li><a href="2019/07-jul">News from the Bleeding Edge</a></li>
         <li>Building Telecom Apps with Node.js</li>
@@ -178,14 +185,14 @@
         <li><strong class="sponsor">Sponsor: <a href="https://company.auntbertha.com/">Aunt Bertha</a></strong></li>
       </ul>
 
-      <h4>June &mdash; <a href="https://www.youtube.com/watch?v=h7s63ZhDMD4&feature=youtu.be&t=508">video</a></h4>
+      <h4>June &mdash; <a href="https://www.youtube.com/watch?v=h7s63ZhDMD4&feature=youtu.be&t=508" target="_blank">video</a></h4>
       <ul>
         <li><a href="2019/06-jun">News from the Bleeding Edge</a></li>
         <li>Real User Measurements and the Development Lifecycle</li>
         <li><strong class="sponsor">Sponsor: <a href="https://www.edgeatx.org/sponsorship.html">Bleeding Edge Web</a></strong></li>
       </ul>
 
-      <h4>May &mdash; <a href="https://www.youtube.com/watch?v=l_kF6YPfECk">video</a></h4>
+      <h4>May &mdash; <a href="https://www.youtube.com/watch?v=l_kF6YPfECk" target="_blank">video</a></h4>
       <ul>
         <li><a href="2019/05-may">News from the Bleeding Edge</a></li>
         <li><a href="adhoc/remodeling">How I Used CSS & JS to Remodel a Condo</a></li>
@@ -193,14 +200,14 @@
         <li><strong class="sponsor">Sponsor: <a href="https://theguild.co/aboutus">The Guild</a></strong></li>
       </ul>
 
-      <h4>April &mdash; <a href="https://www.youtube.com/watch?v=iLIalQdl3d4&feature=youtu.be&t=600">video</a></h4>
+      <h4>April &mdash; <a href="https://www.youtube.com/watch?v=iLIalQdl3d4&feature=youtu.be&t=600" target="_blank">video</a></h4>
       <ul>
         <li><a href="2019/04-apr">News from the Bleeding Edge</a></li>
         <li><a href="https://www.vicesoftware.com/react-redux-boilerplate-with-authentication-authorization-and-architecture-best-practices/">Production React Redux Architecture, Patterns, and Infrastructure Components</a></li>
         <li><strong class="sponsor">Sponsor: <a href="https://cloudflare.com">CloudFlare</a></strong></li>
       </ul>
 
-      <h4>March &mdash; <a href="https://www.youtube.com/watch?v=HUG4l2CK68Y">video</a></h4>
+      <h4>March &mdash; <a href="https://www.youtube.com/watch?v=HUG4l2CK68Y" target="_blank">video</a></h4>
       <ul>
         <li><a href="2019/03-mar">News from the Bleeding Edge</a></li>
         <li><a href="https://docs.google.com/presentation/d/1CXa2qyxXwXN9-5O2-CgUm9Xk2QOhJ_dcFgIihm1mTsk/edit?usp=sharing">Visual Regression Testing with Percy.io</a></li>
@@ -209,14 +216,14 @@
         <li><strong class="sponsor">Sponsor: <a href="https://duo.com/">Duo Security</a></strong></li>
       </ul>
 
-      <h4>February &mdash; <a href="https://www.youtube.com/watch?v=4FSc__j1QX0">video</a></h4>
+      <h4>February &mdash; <a href="https://www.youtube.com/watch?v=4FSc__j1QX0" target="_blank">video</a></h4>
       <ul>
         <li><a href="2019/02-feb">News from the Bleeding Edge</a></li>
         <li>HomeAway's Multi-Cloud Traffic Director (no slides)</li>
         <li><strong class="sponsor">Sponsor: <a href="https://homeaway.com/">HomeAway</a></strong></li>
       </ul>
 
-      <h4>January &mdash; <a href="https://www.youtube.com/watch?v=4_pLo8YrqwU">video</a></h4>
+      <h4>January &mdash; <a href="https://www.youtube.com/watch?v=4_pLo8YrqwU" target="_blank">video</a></h4>
       <ul>
         <li><a href="2019/01-jan">News from the Bleeding Edge</a></li>
         <li><a href="https://github.com/tedpatrick/async-await-talk">Async/Await Demo</a></li>
@@ -229,14 +236,14 @@
       <h4>November / December</h4>
       <p><em>Holiday break</em></p>
 
-      <h4>October &mdash; <a href="https://www.youtube.com/watch?v=JAXU6MgKiik&t=710s">video</a></h4>
+      <h4>October &mdash; <a href="https://www.youtube.com/watch?v=JAXU6MgKiik&t=710s" target="_blank">video</a></h4>
       <ul>
         <li><a href="2018/10-oct">News from the Bleeding Edge</a></li>
         <li><a href="https://speakerdeck.com/cowboyd/state-of-enjoyment">State of Enjoyment</a></li>
         <li><strong class="sponsor">Sponsor: <a href="https://www.cloudflare.com/">Cloudflare</a></strong></li>
       </ul>
 
-      <h4>September &mdash; <a href="https://youtu.be/1u6eL_BEqHo?t=448">video</a></h4>
+      <h4>September &mdash; <a href="https://youtu.be/1u6eL_BEqHo?t=448" target="_blank">video</a></h4>
       <ul>
         <li><a href="2018/09-sep">News from the Bleeding Edge</a></li>
         <li><a href="https://speakerdeck.com/robdel12/testing-big-in-javascript-bleeding-edge-web">Testing Big in JavaScript</a></li>
@@ -250,7 +257,7 @@
         <li><strong class="sponsor">Sponsor: <a href="https://www.cloudflare.com/">Cloudflare</a></strong></li>
       </ul>
 
-      <h4>July &mdash; <a href="https://www.youtube.com/watch?v=owzf7aaQ_WQ&t=665s">video</a></h4>
+      <h4>July &mdash; <a href="https://www.youtube.com/watch?v=owzf7aaQ_WQ&t=665s" target="_blank">video</a></h4>
       <ul>
         <li><a href="2018/07-jul">News from the Bleeding Edge</a></li>
         <li><a href="https://docs.google.com/presentation/d/1c5wU3whpGbhvpKdW-PPDazolUeKjI5Idnc1xFJwv3jc/edit?usp=sharing" target="_blank">Symmetric and Asymmetric Cryptography and RSA Deep Dive</a></li>
@@ -310,7 +317,7 @@
           <a href="2017/10-oct">Bleeding Edge Web</a> /
           <a href="https://docs.google.com/presentation/d/1SZ_DSWphXBksHrylrSPKSVcfLN-O1Ba_BD9ONGDpuVY/edit?usp=sharing">An Introduction To Alexa and Alexa Skills</a>
         </li>
-        <li>September (<a href="https://www.youtube.com/watch?v=jJSApOHv3tQ">video</a> &mdash;
+        <li>September (<a href="https://www.youtube.com/watch?v=jJSApOHv3tQ" target="_blank">video</a> &mdash;
           <a href="2017/09-sep">Bleeding Edge Web</a> /
           <a href="https://drive.google.com/file/d/0ByfYIhtzqBvPZ2pIMnFDWjcxUTQ/view?usp=sharing">Live to Code, Don't Code to Live</a>
         </li>
