Sponsorship info tweak

--- a/sponsorship.html
+++ b/sponsorship.html
@@ -31,8 +31,8 @@
         (e.g. website hosting, meetup.com fees, swag, etc).</p>
       <p><strong>What you get:</strong></p>
       <ul>
-        <li>Your name in front of every person who receives our invitation emails (4,200+ as of
-          this writing, mostly technology workers in Austin)</li>
+        <li>Your name in front of every person who receives our invitation emails (6,000+ as of
+          this writing, mostly tech workers in Austin)</li>
         <li>A mention on the meetup page as a sponsor</li>
         <li>A thank you slide and mention during the Bleeding Edge Web presentation</li>
         <li>A chance to speak to the group in person, if desired</li>
