Post-meet update

--- a/live/index.html
+++ b/live/index.html
@@ -22,16 +22,19 @@
     <p><a href="../">&larr; Home</a></p>
   </header>
 
-  <section class="live-info on">
+  <section class="live-info off">
     <img src="../images/live.svg" class="live-icon-lg" alt="live">
     <br><br>
     <p>
-      Next meetup is Thurs, July 25th at 7pm CT.
+      Next meetup is Thurs, August 22nd at 7pm CT.
     </p>
     <p>
-      <a href="https://expedia.zoom.us/j/96852930841?pwd=aoKwpnNd4uoL5UFKyn0E3MauVghbOc.1" target="_blank">Join
-        live</a> once the meetup has begun.
+      Please check back closer to the meetup for live link.
     </p>
+    <!--p>
+      <a href="#" target="_blank">Join
+        live</a> once the meetup has begun.
+    </p-->
   </section>
 </div>
 
