--- a/slides/index.html
+++ b/slides/index.html
@@ -80,6 +80,13 @@
 
       <h3>2024</h3>
 
+      <h4>August</h4>
+      <ul>
+        <li>News from the Bleeding Edge</li>
+        <li>Repurpose Your JS Frontend As A Desktop and Mobile App With Tauri</li>
+        <li><strong class="sponsor">Sponsor: TBD</strong></li>
+      </ul>
+
       <h4>July</h4>
       <ul>
         <li><a href="2024/07-july/">News from the Bleeding Edge</a></li>
