--- a/slides/index.html
+++ b/slides/index.html
@@ -82,7 +82,7 @@
 
       <h4>August</h4>
       <ul>
-        <li>News from the Bleeding Edge</li>
+        <li><a href="2024/08-aug/">News from the Bleeding Edge</a></li>
         <li>Repurpose Your JS Frontend As A Desktop and Mobile App With Tauri</li>
         <li><strong class="sponsor">Sponsor: TBD</strong></li>
       </ul>
