--- a/live/index.html
+++ b/live/index.html
@@ -22,15 +22,15 @@
     <p><a href="../">&larr; Home</a></p>
   </header>
 
-  <section class="live-info on">
+  <section class="live-info off">
     <img src="../images/live.svg" class="live-icon-lg" alt="live">
     <br><br>
-    <p>Next meetup is Thurs, August 22nd at 7pm CT.</p>
-    <!--p>Please check back closer to the meetup for live link.</p-->
-    <p>
-      <a href="https://expedia.zoom.us/j/93686063794?pwd=pIWRAE2H0BDpZUdn36fdRd1pTx7xSZ.1" target="_blank">Join
+    <p>Next meetup is Thurs, September 26th at 7pm CT.</p>
+    <p>Please check back closer to the meetup for live link.</p>
+    <!--p>
+      <a href="#" target="_blank">Join
         live</a> once the meetup has begun.
-    </p>
+    </p-->
   </section>
 </div>
 
