--- a/slides/index.html
+++ b/slides/index.html
@@ -78,27 +78,34 @@
         <a href="../sponsorship.html">sponsoring</a> an event!
       </p>
 
+      <!----------------------  Events  ---------------------->
+
       <h3>2024</h3>
 
-      <h4>August</h4>
+      <h4>September</h4>
+      <ul>
+        <li><a href="2024/09-sep/">News from the Bleeding Edge</a></li>
+        <li>Coding with AI Assistants</li>
+        <li>Supercharging Development with AI: A Modern Toolchain Revolution</li>
+      </ul>
+
+      <h4>August &mdash; <a href="https://www.youtube.com/watch?v=BrJhJkXzopY" target="_blank">video</a></h4>
       <ul>
         <li><a href="2024/08-aug/">News from the Bleeding Edge</a></li>
         <li>Repurpose Your JS Frontend As A Desktop and Mobile App With Tauri</li>
-        <li><strong class="sponsor">Sponsor: TBD</strong></li>
       </ul>
 
-      <h4>July</h4>
+      <h4>July &mdash; <a href="https://www.youtube.com/watch?v=8FOJZmBW_Eg" target="_blank">video</a></h4>
+      <em class="small-text">The video has no audio due to technical difficulties :(</em>
       <ul>
         <li><a href="2024/07-july/">News from the Bleeding Edge</a></li>
         <li>Turbo Charge Your Stack with AI</li>
-        <li><strong class="sponsor">Sponsor: <a href="https://www.edgeatx.org/sponsorship.html">Bleeding Edge Web</a></strong></li>
       </ul>
 
       <h4>June &mdash; <a href="https://www.youtube.com/watch?v=0PsWVR0K9z0" target="_blank">video</a></h4>
       <ul>
         <li><a href="2024/06-june/">News from the Bleeding Edge</a></li>
         <li>The Root of All (Web) Evils</li>
-        <li><strong class="sponsor">Sponsor: <a href="https://www.edgeatx.org/sponsorship.html">Bleeding Edge Web</a></strong></li>
       </ul>
 
       <h4>May</h4>
@@ -112,7 +119,6 @@
       <ul>
         <li><a href="2024/04-apr/">News from the Bleeding Edge</a></li>
         <li><a href="https://noti.st/davatron5000/k6N2LP/html-with-superpowers">HTML with Superpowers</a></li>
-        <li><strong class="sponsor">Sponsor: <a href="https://www.edgeatx.org/sponsorship.html">Bleeding Edge Web</a></strong></li>
       </ul>
 
       <h4>March &mdash; <a href="https://www.youtube.com/watch?v=4-fkYNv7qog" target="_blank">video</a></h4>
