--- a/live/index.html
+++ b/live/index.html
@@ -25,7 +25,8 @@
   <section class="live-info off">
     <img src="../images/live.svg" class="live-icon-lg" alt="live">
     <br><br>
-    <p>Next meetup is Thurs, October 24th at 7pm CT.</p>
+    <p>The 2024 meetup season is done.</p>
+    <p>Next meetup will be in January 2025.</p>
     <p>Please check back closer to the meetup for live link.</p>
     <!--p>
       <a href="#" target="_blank">Join
