--- a/slides/index.html
+++ b/slides/index.html
@@ -82,7 +82,10 @@
 
       <h3>2024</h3>
 
-      <h4>September</h4>
+      <h4>October&ndash;December</h4>
+      <p><em>Holiday break</em></p>
+
+      <h4>September &mdash; <a href="https://www.youtube.com/watch?v=fNHRSF0XWJg" target="_blank">video</a></h4>
       <ul>
         <li><a href="2024/09-sep/">News from the Bleeding Edge</a></li>
         <li>Coding with AI Assistants</li>
