--- a/live/index.html
+++ b/live/index.html
@@ -22,16 +22,14 @@
     <p><a href="../">&larr; Home</a></p>
   </header>
 
-  <section class="live-info off">
+  <section class="live-info on">
     <img src="../images/live.svg" class="live-icon-lg" alt="live">
     <br><br>
-    <p>The 2024 meetup season is done.</p>
-    <p>Next meetup will be in January 2025.</p>
     <p>Please check back closer to the meetup for live link.</p>
-    <!--p>
-      <a href="#" target="_blank">Join
+    <p>
+      <a href="https://expedia.zoom.us/j/92838461290?pwd=ZLhWbNaSgJLHkvJNSaVydNOSMSm1EN.1&from=addon" target="_blank">Join
         live</a> once the meetup has begun.
-    </p-->
+    </p>
   </section>
 </div>
 
