--- a/slides/index.html
+++ b/slides/index.html
@@ -80,6 +80,14 @@
 
       <!----------------------  Events  ---------------------->
 
+      <h3>2025</h3>
+
+      <h4>January</h4>
+      <ul>
+        <li><a href="2025/01-jan/">News from the Bleeding Edge</a></li>
+        <li>Express Forward with Wesley Todd</li>
+      </ul>
+
       <h3>2024</h3>
 
       <h4>October&ndash;December</h4>
